<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort_by"
        android:title="@string/action_sort_by"
        android:icon="@drawable/ic_sort_by"
        android:orderInCategory="50"
        app:showAsAction="always">

        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_popular"
                    android:title="@string/popular" />
                <item
                    android:id="@+id/sort_by_top_rated"
                    android:title="@string/top_rated" />
                <item
                    android:id="@+id/sort_by_favourite"
                    android:title="@string/favourite"/>
            </group>
        </menu>

    </item>

</menu>