<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.ruslanyussupov.popularmovies.ui.DetailActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/detailTitle"
            android:paddingLeft="@dimen/detail_padding_horizontal"
            android:paddingStart="@dimen/detail_padding_horizontal"
            android:paddingRight="@dimen/detail_padding_horizontal"
            android:paddingEnd="@dimen/detail_padding_horizontal"
            android:paddingTop="@dimen/detail_title_padding_vertical"
            android:paddingBottom="@dimen/detail_title_padding_vertical"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="Avengers: Age of Ultron"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>

        <ImageView
            android:id="@+id/poster_iv"
            android:layout_width="@dimen/detail_poster_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_poster_content_description"
            android:adjustViewBounds="true"
            android:layout_marginTop="@dimen/detail_margin_vertical"
            android:layout_marginLeft="@dimen/detail_poster_margin_left"
            android:layout_marginStart="@dimen/detail_poster_margin_left"
            android:scaleType="fitStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_tv"
            tools:src="@drawable/poster_placeholder" />

        <TextView
            android:id="@+id/release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_margin_vertical"
            android:layout_marginLeft="@dimen/detail_label_margin_left"
            android:layout_marginStart="@dimen/detail_label_margin_left"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/release_date_label"
            app:layout_constraintLeft_toRightOf="@id/poster_iv"
            app:layout_constraintTop_toBottomOf="@id/title_tv" />

        <TextView
            android:id="@+id/average_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_margin_vertical"
            android:layout_marginLeft="@dimen/detail_label_margin_left"
            android:layout_marginStart="@dimen/detail_label_margin_left"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/average_rating_label"
            app:layout_constraintLeft_toRightOf="@id/poster_iv"
            app:layout_constraintTop_toBottomOf="@id/release_date_label" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_margin_vertical"
            android:paddingEnd="@dimen/detail_padding_horizontal"
            android:paddingLeft="@dimen/detail_padding_horizontal"
            android:paddingRight="@dimen/detail_padding_horizontal"
            android:paddingStart="@dimen/detail_padding_horizontal"
            android:textStyle="bold"
            android:text="@string/no_information"
            app:layout_constraintBottom_toBottomOf="@id/release_date_label"
            app:layout_constraintLeft_toRightOf="@id/release_date_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"
            tools:text="2015-04-22" />

        <TextView
            android:id="@+id/user_rating_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_margin_vertical"
            android:paddingEnd="@dimen/detail_padding_horizontal"
            android:paddingLeft="@dimen/detail_padding_horizontal"
            android:paddingRight="@dimen/detail_padding_horizontal"
            android:paddingStart="@dimen/detail_padding_horizontal"
            android:textStyle="bold"
            android:text="@string/no_information"
            app:layout_constraintBottom_toBottomOf="@id/average_rating_label"
            app:layout_constraintLeft_toRightOf="@id/average_rating_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date_label"
            tools:text="7.3" />

        <TextView
            android:id="@+id/overview_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_margin_vertical"
            android:paddingLeft="@dimen/detail_padding_horizontal"
            android:paddingStart="@dimen/detail_padding_horizontal"
            android:paddingRight="@dimen/detail_padding_horizontal"
            android:paddingEnd="@dimen/detail_padding_horizontal"
            android:paddingBottom="@dimen/detail_padding_vertical"
            tools:text="When Tony Stark tries to jumpstart a dormant peacekeeping program, things go awry and Earth’s Mightiest Heroes are put to the ultimate test as the fate of the planet hangs in the balance. As the villainous Ultron emerges, it is up to The Avengers to stop him from enacting his terrible plans, and soon uneasy alliances and unexpected action pave the way for an epic and unique global adventure."
            app:layout_constraintTop_toBottomOf="@id/poster_iv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>


</ScrollView>
